# ABAQS_Compiler

./: .gitignore  CMakeLists.txt  README.md  arch.xml  configure  log.txt
architectures/: granuloma.xml
ideas/: 2018-06-04-ideas.txt  2018-06-12-ideas.txt  2018-06-13-ideas.txt  2018-06-ideas.txt  2018-08-ideas.txt  most-releavant.txt
models/: dictyo_spiral_waves.xml  granuloma.xml  test.xml
resources/: rules_template.txt
src/: abaqs_arch.cpp  abaqs_arch.h  abaqs_types.cpp  abaqs_types.h  ast.cpp  ast.h  ast_base.h  compiler.cpp  compiler.h  doc_checks.cpp  doc_checks.h  inter_rep.cpp  inter_rep.h  main.cpp  rule.cpp  rule.h  rule_processor.cpp  rule_processor.h  species.cpp  species.h  var_dep_graph.cpp  var_dep_graph.h  verilog_writer.cpp  verilog_writer.h
