CMAKE_MINIMUM_REQUIRED ( VERSION 3.5.1 )
PROJECT ( ABAQS_Compiler )

FILE ( GLOB sources src/* )

ADD_EXECUTABLE ( abaqs ${sources} )

SET( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c++17" )
SET( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall" )
SET( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wfatal-errors" )

SET ( LIBSBML_DIR "/home/kyle/programs/libsbml-beta" )
INCLUDE_DIRECTORIES ( ${LIBSBML_DIR}/include )

ADD_LIBRARY ( libsbml SHARED IMPORTED )
SET_TARGET_PROPERTIES (
  libsbml
  PROPERTIES
  IMPORTED_LOCATION "${LIBSBML_DIR}/lib/libsbml.so"
  INTERFACE_INCLUDE_DIRECTORIES "${LIBSBML_DIR}/include/"
)

TARGET_LINK_LIBRARIES ( abaqs libsbml )
