CMAKE_MINIMUM_REQUIRED ( VERSION 3.5.1 )
PROJECT ( ABAQS_Compiler )

FILE ( GLOB sources src/* )

ADD_EXECUTABLE ( abaqs ${sources} )

SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17" )
SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall" )
SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wfatal-errors" )

TARGET_LINK_LIBRARIES ( abaqs sbml xml2)
